General fixes to the Search Dialog, Status/Error message