@@ -11,7 +11,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 public class User implements Serializable {
 
@@ -52,7 +51,7 @@ public class User implements Serializable {
                 .flatMap(album -> album.getPhotos().stream())
                 .distinct()
                 .filter(predicate)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
